feat/mobile people + people db update (#49)
* fix(HeroImagePeople): update height for people page mobile

* fix(container): adjust to small padding for mobile

* feat(Faculty): update layout and styling for faculty on mobile view

* feat(Staff): update staff layout for mobile view

* feat(people): remove dot patterns on mobile

* wip feat(FilterBlock): mobile view

* feat/mobile header footer + navbar (#46)

* feat(footer): mobile footer

* feat(header): mobile view

* feat(navbar): mobile view

* fix(navbar): change mobile view breakpoint to x2xl (1536px)

- not sure how to redefine the tailwindcss breakpoints

* fix(navbar): update font style to bold for active submenu items

* feat: disgusting breakpoint

* fix: header same breakpoint

---------

Co-authored-by: Candbot Chan <candbot@outlook.com>

* feat/about-isd-m (#47)

* feat: new css values

* feat: home

* feat: about isd page

* feat: moved location of navigation button on the carousel so that it looks better

* fix: reduced jumpscare

* feat/mobile header footer + navbar (#46)

* feat(footer): mobile footer

* feat(header): mobile view

* feat(navbar): mobile view

* fix(navbar): change mobile view breakpoint to x2xl (1536px)

- not sure how to redefine the tailwindcss breakpoints

* fix(navbar): update font style to bold for active submenu items

* feat: disgusting breakpoint

* fix: header same breakpoint

---------

Co-authored-by: Candbot Chan <candbot@outlook.com>

* fix: font size adjustments

* fix: url

* fix: removed unnecessary justify

* fix(Carousel): adjust height for image layer and navigation buttons

---------

Co-authored-by: Zhang Yunxin <zhang.yunxin@live.com>

* fix(faculty): add some regular as also joint

* fix(staff): write staff instead of ISD staff

* feat(people): done mobile view

* fix: adjusted padding

---------

Co-authored-by: Candbot Chan <candbot@outlook.com>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,10 +180,17 @@
 /* Simple container helper */
 .container {
     max-width: calc(var(--container-max-width) + 2 * var(--component-gap-sm));
-    padding-left: var(--component-gap-sm);
-    padding-right: var(--component-gap-sm);
+    padding-left: var(--element-gap);
+    padding-right: var(--element-gap);
     margin-left: auto;
     margin-right: auto;
+}
+
+@media (min-width: 768px) {
+    .container {
+        padding-left: var(--component-gap-sm);
+        padding-right: var(--component-gap-sm);
+    }
 }
 
 .text-isd-font-3 {
