Feat/mobile-academics (#59)
* feat(program): mobile view for academics program

* feat(internship): uni logos display for mobile

* style(scholarships): add text justification

* style(internship): add text justification and fix mobile text size

* style(internship): add text justification and fix mobile text size

* style(program): remove dot pattern for mobile

* feat(facility): facilities gallery mobile

- too lazy to edit the CarouselTriple to handle 1 image per slide

* fix(academics): forgot to add text-sm

* fix: adjusted spacing

* fix: removed dot pattern for mobile

* fix: adjusted spacing

---------

Co-authored-by: Candbot Chan <candbot@outlook.com>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -245,6 +245,8 @@
     background-size: 26px 24px;
     background-repeat: repeat;
     z-index: -1;
+
+    @apply lg:block hidden;
 }
 
 @plugin "daisyui/theme" {
